<resources>
    <string name="app_name">LockPass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Nombre_Cuenta">Nombre de la cuentas</string>
    <string name="Cuenta">Cuenta</string>
    <string name="Guardar">Guardar</string>
    <string name="Cancelar">Cancelar</string>


    <string name="Password">Password</string>
    <string name="compartir">compartir</string>
    <string name="Seleccionar">Seleccionar Categoria</string>
    <string name="SeleccionarIcono">Seleccionar Icono Categoria</string>
    <string name="usuario">Usuario</string>
    <string name="notas">Notas</string>
    <string name="Registrar">Registrar Cuenta</string>
    <string name="CrearCategoria">Crear Categoría</string>
    <string name="Modificar">Modificar</string>
    <string name="link">link</string>
</resources>