<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal.RegistroCuentas">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cue_guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ilustraciontres" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Registrar Cuenta"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_cue_categoria"
                style="@android:style/Widget.Material.Light.TextView.SpinnerItem"
                android:layout_width="@dimen/widthtextview"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custon_fondo_text"
                android:drawableLeft="@drawable/ic_categorias"
                android:drawableRight="@drawable/ic_buscador"
                android:gravity="center"
                android:hint="@string/Seleccionar"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/material_dynamic_neutral40"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/widthtextview"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Nombre_Cuenta"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_add">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_cue_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutpassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/widthtextview"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Password"
                app:endIconMode="password_toggle"
                app:helperText="Required"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_cue_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/widthtextview"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_listadd"
                android:padding="10dp"
                android:text="Expandir    "
                android:textAlignment="textEnd" />

            <LinearLayout
                android:layout_width="@dimen/widthtextview"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutusuario"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/widthtextview"
                    android:layout_height="56dp"

                    android:hint="@string/usuario"
                    app:helperText="Required"
                    app:startIconDrawable="@drawable/ic_buscador">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usuario"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="12sp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutnotas"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/widthtextview"
                    android:layout_height="100dp"
                    android:hint="@string/notas"
                    app:helperText="Required"
                    app:startIconDrawable="@drawable/ic_listas">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textImeMultiLine"
                        android:lineSpacingMultiplier="@integer/material_motion_duration_medium_1"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="12sp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_cue_guardar"
        android:layout_width="@dimen/widthtextview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custon_button"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>