<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal.RegistroCategoria">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ilustraciontres" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/widthtextview"
            android:layout_height="match_parent"
            android:hint="@string/Nombre_Cuenta"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_add">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_cue_categoria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/widthtextview"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/Seleccionar"
                app:endIconDrawable="@drawable/ic_tocar"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_categorias">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/seleccionarcategoria"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/logoCategoria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="3"
                app:srcCompat="@drawable/ic_cancelable" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_cat_guardar"
        android:layout_width="@dimen/widthtextview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>