<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custon_fondo_blanco"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Principal.RegistroCuentas">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_registro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:divider="@drawable/divider"
            android:dividerPadding="8dp"
            android:orientation="horizontal"
            android:showDividers="end">

            <TextView
                android:id="@+id/toolbar_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_cancelable"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textAllCaps="true" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ilustraciontres" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Nombre_Cuenta"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_add">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textnombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutpassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="250dp"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:hint="@string/Password"
                app:endIconMode="password_toggle"
                app:helperText="Required"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_cue_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="12sp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

        <ImageButton
            android:id="@+id/imgagregar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/custon_button"
            android:contentDescription="@string/Guardar"
            android:cropToPadding="false"
            android:src="@drawable/ic_add"
            app:tint="@color/secondaryTextColor" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/imgguardar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/custon_button"
            android:contentDescription="@string/Cancelar"
            android:src="@drawable/ic_check"
            app:tint="@color/secondaryTextColor" />

    </LinearLayout>


</LinearLayout>